--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/iflix/job/oQTCafwf'>iflix Careers - Junior UI/UX designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351621-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -56,11 +60,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692283821-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692283821-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/o36CafwF'>Splunk Careers - Principal UI Designer, Enterprise</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/o36CafwF'>Splunk Careers - Principal UI Designer, Enterprise</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Join us as we pursue our disruptive new vision to make machine data accessible, 
 usable and valuable to everyone. We are a company filled with people who?...</p>
@@ -115,7 +119,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692111442-sr-ui-developer-web-developer-need-only-us-citizens-'>Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692111442-sr-ui-developer-web-developer-need-only-us-citizens-'>Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -181,7 +185,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oZUx9fwj&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nqSwSKwV'>Apttus Careers - Principal Engineer, UI</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oZUx9fwj&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nqSwSKwV'>Apttus Careers - Principal Engineer, UI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-04-05</p>
 <hr/>
@@ -217,7 +221,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -253,7 +257,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oF8G9fwm&__jvst=ER+-+Employee+Referral&__jvsd=sTJmRhwB&__jvsc=Twitter&bid=nLXvSKwk'>Nutanix Careers - Member of Technical Staff (UI-BEAM)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oF8G9fwm&__jvst=ER+-+Employee+Referral&__jvsd=sTJmRhwB&__jvsc=Twitter&bid=nLXvSKwk'>Nutanix Careers - Member of Technical Staff (UI-BEAM)</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -325,7 +329,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-technician-iii-ophthalmology-4303'>Clinical Technician III - Ophthalmology - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-technician-iii-ophthalmology-4303'>Clinical Technician III - Ophthalmology - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -363,7 +367,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/leaseweb/jobs/1787123'>Job Application for UI/UX Designer at LeaseWeb</a></h5> 
+<h5><a href='https://boards.greenhouse.io/leaseweb/jobs/1787123'>Job Application for UI/UX Designer at LeaseWeb</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -428,7 +432,7 @@ and experience Workday! It's fun to work in a company where people truly?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4272/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4272/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -445,10 +449,6 @@ and experience Workday! It's fun to work in a company where people truly?...</p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/4276/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4277/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
